190725_add 04_data_structure_02

--- a/01_python/problems/04_data_structure_01.ipynb
+++ b/01_python/problems/04_data_structure_01.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "예시)\n",
     "```python\n",
-    "print(up_and_low('appleppie')) #=> aPpLePiE\n",
+    "print(up_and_low('applepie')) #=> aPpLePiE\n",
     "print(up_and_low('spaceship')) #=> sPaCeShIp\n",
     "```"
    ]
@@ -46,8 +46,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def up_and_low(words):\n",
-    "    return ''.join([(words[location].lower() if (location+1) % 2 else words[location].upper()) for location in range(len(words))])"
+    "def up_and_low(word):\n",
+    "    return ''.join([word[idx].lower() if (idx+1) % 2 else word[idx].upper() for idx in range(len(word))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def up_and_low(word):\n",
+    "    new_str = ''\n",
+    "    for idx, char in enumerate(word):\n",
+    "        if idx % 2: # 인덱스가 홀수번째면 실제로 짝수번째를 변경하는 것\n",
+    "            new_str += char.upper()\n",
+    "        else:\n",
+    "            new_str += char.lower()\n",
+    "    return new_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def up_and_low(word):\n",
+    "    new_list = ''.join([char.upper() if idx%2 else char.lower() for idx, char in enumerate(word)])\n",
+    "    return new_list"
    ]
   },
   {
@@ -87,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,29 +131,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def passpass(test_score_info):\n",
     "    mid_result = sorted(test_score_info.items(), key = lambda x : x[1], reverse = True)\n",
-    "    final_result = [element[0] for element in mid_result if element[1] >= 60]\n",
-    "    return final_result"
+    "    return [element[0] for element in mid_result if element[1] >= 60]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ruby', 'Python']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# 내림차순 / 값이 60점 이상인 애들을 리스트에 넣기\n",
+    "# 새로 만든 리스트(값이 60점 이상인 애들을 리스트)랑 원본 딕셔너리의 키의 값과 비교해서 같으면 그 키를 가져오면 될 듯\n",
+    "def passpass(results):\n",
+    "    list_1 = []\n",
+    "    # 60점 이상인 점수 뽑아오기 ( + 내림차순)\n",
+    "    for value in sorted(results.values(), reverse=True):\n",
+    "        if value >= 60:\n",
+    "            list_1.append(value)\n",
+    "            \n",
+    "    # list_1 를 반복해서 원본 딕셔너리의 값과 같은 상황에서 그 키를 새로운 리스트에 넣는다.\n",
+    "    list_2 = []\n",
+    "    for num in list_1:\n",
+    "        for key, value in results.items():\n",
+    "            if num == value:\n",
+    "                list_2.append(key)\n",
+    "    return list_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(passpass({'Java': 10, 'Ruby': 80, 'Python': 65}))"
@@ -188,6 +230,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1부터 더해서 맞추려기 보다 1부터 빼가면서 찾아간다면??\n",
+    "\"\"\"\n",
+    "ex) 10이 들어온다면\n",
+    "10 - 1 = 9\n",
+    "9 - 2 = 7\n",
+    "7 - 3 = 4\n",
+    "4 - 4 = 0\n",
+    "0이 되는 순간 이 수(10)는 삼각수이다. \n",
+    "\"\"\"\n",
+    "\n",
+    "def is_triangular(number):\n",
+    "    sub = 1\n",
+    "    while number > 0:\n",
+    "        number -= sub\n",
+    "        sub += 1\n",
+    "    return not number # 0이 삼각수이기 때문에 False 가 삼각수다. 그래서 not 을 붙여준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(is_triangular(5050))\n",
     "print(is_triangular(57))"
@@ -229,12 +295,60 @@
    "outputs": [],
    "source": [
     "def create_dict(keys, values):\n",
-    "    if len(keys) > len(values):\n",
-    "        for i in range(1, (len(keys)-len(values))+1):\n",
+    "    if len(keys) >= len(values):\n",
+    "        for add_None_count in range(len(keys)-len(values)):\n",
     "            values.append(None)\n",
     "        return {key: value for key, value in zip(keys, values)}\n",
-    "    elif len(keys) < len(values):\n",
+    "    else:\n",
     "        return {key: value for key, value in zip(keys, values[:-(len(values)-len(keys))])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 두 리스트를 길이 비교를 해서 value 리스트가 더 짧다면 두 길이가 같아질때까지 value 리스트에 None을 append\n",
+    "\n",
+    "def create_dict(keys, values):\n",
+    "    new_dict = {}\n",
+    "    for i in range(len(keys)):\n",
+    "        if i < len(values):\n",
+    "            new_dict[keys[i]] = values[i]\n",
+    "            # new_dict.update({keys[i]: values[i]})\n",
+    "        else:\n",
+    "            new_dict[keys[i]] = None\n",
+    "            # new_dict.update({keys[i]: None})\n",
+    "    return new_dict            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dict(keys, values):\n",
+    "    while len(keys) > len(values): # values 가 계속 길어질 것이기 때문. 그래서 저 부등호가 깨지는 즉, 같아지는 순간까지 None 추가\n",
+    "        values.append(None)\n",
+    "    result = dict(zip(keys, values))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 두 리스트의 길이 차이(keys-values)가 0보다 크다면 그 차이만큼 values 에 None 을 넣는다.\n",
+    "def create_dict(keys, values):\n",
+    "    diff = len(keys) - len(values)\n",
+    "    if diff > 0:\n",
+    "        values += [None] * diff\n",
+    "    result = dict(zip(keys, values))\n",
+    "    return result"
    ]
   },
   {
@@ -285,13 +399,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dict_invert(ori_dict):\n",
+    "def dict_invert(original_dict):\n",
     "    result = {}\n",
-    "    for key, val in ori_dict.items():\n",
+    "    for key, val in original_dict.items():\n",
     "        if val not in result.keys():\n",
-    "            result[val]=[key]\n",
+    "            result[val] = [key]\n",
     "        else:\n",
     "            result[val].append(key)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# items 로 반복해서 새로운 딕셔너리에 값은 키로 키는 값으로 넣는데,\n",
+    "# 넣기 전에 값이 이미 새로운 딕셔너리 키 값에 있다면 키를 그 값의 리스트로 넣어야 함\n",
+    "\n",
+    "def dict_invert(my_dict):\n",
+    "    result = {}\n",
+    "    for key, value in my_dict.items():\n",
+    "        if value in result:\n",
+    "            result[value].append(key)\n",
+    "        else:\n",
+    "            result[value] = [key]\n",
     "    return result"
    ]
   },
@@ -346,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +490,7 @@
     "            score += 4\n",
     "        elif my == '':\n",
     "            pass\n",
-    "        elif real != my:\n",
+    "        else:\n",
     "            score -= 1\n",
     "    if score < 0:\n",
     "        score = 0\n",
@@ -366,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,20 +510,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "7\n",
-      "16\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def check_score(real_answers, my_answers):\n",
+    "    score = 0\n",
+    "    for i in range(len(real_answers)):\n",
+    "        if real_answers[i] == my_answers[i]:\n",
+    "            score += 4\n",
+    "        elif my_answers[i] == '':\n",
+    "            score += 0\n",
+    "        else:\n",
+    "            score -= 1\n",
+    "    return score if score >= 0 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# comprehension, zip, sum, max로 조합해서 한 줄로 작성\n",
+    "\n",
+    "def check_score(real_answers, my_answers):\n",
+    "    return max(0, sum([4 if real==my else -1 for real, my in zip(real_answers, my_answers) if my]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(check_score(['a', 'a', 'b', 'b'], ['a', 'c', 'b', 'd']))\n",
