--- a/01_python/04_data_structure.ipynb
+++ b/01_python/04_data_structure.ipynb
@@ -326,9 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['starbucks', 'tomntoms', 'hollys']\n"
+     ]
+    }
+   ],
    "source": [
     "cafe = ['starbucks', 'tomntoms', 'hollys']\n",
     "print(cafe)"
@@ -336,12 +344,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['starbucks', 'tomntoms', 'hollys', 'hollys']\n"
+     ]
+    }
+   ],
    "source": [
     "# 값을 추가해봅시다.\n",
-    "cafe.append('caffebene')"
+    "cafe.append('hollys')\n",
+    "print(cafe)"
    ]
   },
   {
@@ -2138,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,9 +2165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
     "list(filter(odd, numbers))"
@@ -2158,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,11 +2195,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[x for x in numbers if x % 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x for x in numbers if odd(x)]"
    ]
   },
   {
@@ -2179,9 +2238,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "[x for x in numbers if odd(x)]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
