--- a/01_python/problems/04_data_structure_02.ipynb
+++ b/01_python/problems/04_data_structure_02.ipynb
@@ -127,6 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def my_join(target, word):\n",
+    "    return ''.join([letter if letter == target[-1] else letter + word for letter in target])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(my_join('배고파', '.'))\n",
     "print(my_join(['1', '2', '3'], ''))"
    ]
@@ -238,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,15 +260,23 @@
     "        for digit in number:\n",
     "            if digit not in check_list:\n",
     "                check_list.append(digit)\n",
-    "    result = sorted(list(set(compare_list) - set(check_list)))\n",
-    "    return ''.join(result)"
+    "    return ''.join(sorted(list(set(compare_list) - set(check_list))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09\n",
+      "3479\n"
+     ]
+    }
+   ],
    "source": [
     "print(unused_digits(12, 34, 56, 78))\n",
     "print(unused_digits(2015, 8, 26))"
@@ -389,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,9 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1212\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(calc('123+2-124'))\n",
     "print(calc('-12+12-7979+9191'))\n",
