190726_modify 04_data_structure_02

--- a/01_python/problems/04_data_structure_02.ipynb
+++ b/01_python/problems/04_data_structure_02.ipynb
@@ -137,6 +137,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def my_join(target, word):\n",
+    "    # 첫 문자열은 원본의 첫번째 값\n",
+    "    result = target[0]\n",
+    "    for i in target[1:]:\n",
+    "        result += word + i\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(my_join('배고파', '.'))\n",
     "print(my_join(['1', '2', '3'], ''))"
    ]
@@ -210,6 +224,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1\n",
+    "def solve(words):\n",
+    "    upper = 0\n",
+    "    lower = 0\n",
+    "    \n",
+    "    # 대소문자를 각자 카운트.\n",
+    "    for word in words:\n",
+    "        if word.islower():\n",
+    "            lower += 1\n",
+    "        else:\n",
+    "            upper += 1\n",
+    "    \n",
+    "    # 두 개의 카운트 값을 비교해서 원본을 변경\n",
+    "    if lower == upper or lower > upper :\n",
+    "        return words.lower()\n",
+    "    else:\n",
+    "        return words.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2\n",
+    "# 대문자만 카운트 / 원본 길이의 절반보다 많으면 대문자로 변경 / 아니면 소문자로 변경\n",
+    "def solve(words):\n",
+    "    count = 0\n",
+    "    for word in words:\n",
+    "        if word.isupper():\n",
+    "            count += 1\n",
+    "    if count > len(words)/2:\n",
+    "        return words.upper()\n",
+    "    else:\n",
+    "        return words.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 2번을 comprehension으로 변경\n",
+    "def solve(words):\n",
+    "    count = sum([1 for word in words if word.isupper()])\n",
+    "    return words.upper() if count > len(words)/2 else words.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(solve('coDe'))\n",
     "print(solve('CODe'))\n",
     "print(solve('coDE'))"
@@ -248,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,21 +335,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "09\n",
-      "3479\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# 비교할 수 있는 set 구문을 하나 만들고 set('0123456789')\n",
+    "# 입력된 값도 문자열 타입 + set로 변경해서 \n",
+    "# 비교 set 에서 입력된 set를 뺄거임.\n",
+    "# 그러면 안 쓴 번호만 남게 되는데 걔를 정렬하고 문자열로 합치면 됨\n",
+    "\n",
+    "def unused_digits(*args):\n",
+    "    word = set('0123456789') # = set(map(str, range(10)))\n",
+    "    for arg in args:\n",
+    "        word -= set(str(arg))\n",
+    "    return ''.join(sorted(word))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- iterable - 시퀀스(문자열, 리스트, 튜플..)\n",
+    "- collection - set, dictionary ..) (.join은 collection에서도 쓸 수 있다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(unused_digits(12, 34, 56, 78))\n",
     "print(unused_digits(2015, 8, 26))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(sorted)"
    ]
   },
   {
@@ -360,6 +456,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 pop() => return\n",
+    "# set 으로 중복 제거 후 리스트로 변경 후 정렬\n",
+    "# 짝수 리스트와 홀수 리스트를 따로 분류\n",
+    "# 둘 다 오름차순 상태인데 pop을 사용할 거기 때문에 문제와 반대로 정렬해야 한다.\n",
+    "\n",
+    "def even_and_odd(numbers):\n",
+    "    numbers = sorted(list(set(numbers)))\n",
+    "    even = []\n",
+    "    odd = []\n",
+    "    result = []\n",
+    "    \n",
+    "    for number in numbers:\n",
+    "        if number % 2:\n",
+    "            odd.append(number)\n",
+    "        else:\n",
+    "            even.append(number)\n",
+    "    even = even[::-1] # 리스트 뒤집기 -> 짝수는 내림차순으로 변경(아래에서 pop으로 뒤에서 꺼낼 것이기 때문.)\n",
+    "    \n",
+    "    # 짝수리스트와 홀수리스트가 모두 빌 때까지 반복 / 새로운 결과 리스트에 삽입(짝수부터)\n",
+    "    while True:\n",
+    "        if len(even) == 0 and len(odd) == 0:\n",
+    "            break\n",
+    "        if len(even):\n",
+    "            result.append(even.pop())\n",
+    "        if len(odd):\n",
+    "            result.append(odd.pop())\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -407,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,19 +553,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1212\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# 1 replace()\n",
+    "#'+' => ' +'\n",
+    "\n",
+    "def calc(equation):\n",
+    "    equation = equation.replace('+', ' +')\n",
+    "    equation = equation.replace('-', ' -')\n",
+    "    return sum(map(int, equation.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2\n",
+    "def calc(equations):\n",
+    "    new_str = ''\n",
+    "    res_cal = 0\n",
+    "    for equation in equations:\n",
+    "        if equation.isdecimal():\n",
+    "            new_str += equation\n",
+    "        else:\n",
+    "            if new_str:\n",
+    "                res_cal += int(new_str)\n",
+    "                new_str = ''\n",
+    "            new_str += equation\n",
+    "    res_cal += int(new_str)\n",
+    "    return res_cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3\n",
+    "def calc(equation):\n",
+    "    return eval(equation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(calc('123+2-124'))\n",
     "print(calc('-12+12-7979+9191'))\n",
