190729 | little modify 01_python

--- a/01_python/03_function.ipynb
+++ b/01_python/03_function.ipynb
@@ -1113,7 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test()\n",
+    "def test():\n",
     "    str = '4' # local scope\n",
     "    \n",
     "str = '5' # Global scope\n",
