--- a/01_python/07_OOP_basic.ipynb
+++ b/01_python/07_OOP_basic.ipynb
@@ -1238,7 +1238,8 @@
    "outputs": [],
    "source": [
     "p2.name = 'Jack'\n",
-    "p2.name"
+    "p2.name\n",
+    "p2.greeting()"
    ]
   },
   {
