--- a/01_python/08_OOP_advanced.ipynb
+++ b/01_python/08_OOP_advanced.ipynb
@@ -599,13 +599,13 @@
     "        return '이것은 멍멍이입니다!!'\n",
     "    \n",
     "dog = Dog('초코', '푸들')\n",
-    "# 인스턴스 메서드\n",
+    "# # 인스턴스 메서드\n",
     "dog.bark()\n",
     "\n",
-    "# 클래스 메서드\n",
+    "# # 클래스 메서드\n",
     "Dog.get_status()\n",
     "\n",
-    "# 스태틱 메서드\n",
+    "# # 스태틱 메서드\n",
     "Dog.get_info()"
    ]
   },
@@ -813,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(young < old)"
+    "print(young > old)"
    ]
   },
   {
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,60 +1605,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'나는 Student'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.greeting() # ??????"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'나는 Student'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Student.greeting()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'나는 Person'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Person.greeting()"
    ]
