--- a/01_python/04_data_structure.ipynb
+++ b/01_python/04_data_structure.ipynb
@@ -290,6 +290,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dir('string')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "'asdad'.isalpha()"
    ]
   },
@@ -299,7 +308,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'한글은'.isaphia"
+    "'한글은'.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'D'.isupper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'apple'.istitle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Apple'.istitle()"
    ]
   },
   {
@@ -326,17 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['starbucks', 'tomntoms', 'hollys']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cafe = ['starbucks', 'tomntoms', 'hollys']\n",
     "print(cafe)"
@@ -344,17 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['starbucks', 'tomntoms', 'hollys', 'hollys']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 값을 추가해봅시다.\n",
     "cafe.append('hollys')\n",
@@ -806,6 +826,17 @@
    "source": [
     "import random\n",
     "lotto = random.sample(range(1,46), 6)\n",
+    "print(lotto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_list = sorted(lotto)\n",
+    "print(re_list)\n",
     "print(lotto)"
    ]
   },
@@ -1519,6 +1550,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict.update(grape = '포도')\n",
+    "print(my_dict)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1990,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,27 +2042,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('jane', 'justin'), ('iu', 'david'), ('mary', 'kim')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(zip(girls, boys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,17 +2061,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'jane': 'kim', 'iu': 'kim', 'mary': 'kim'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dictionary comprehension\n",
     "result = {girl: boy for girl in girls for boy in boys}\n",
@@ -2051,20 +2073,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'jane': 'justin', 'iu': 'david', 'mary': 'kim'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# zip\n",
     "{girl: boy for girl, boy in zip(girls, boys)}"
@@ -2079,19 +2090,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 5\n",
-      "2 6\n",
-      "3 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = '123'\n",
     "b = '567'\n",
@@ -2155,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2165,20 +2166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
     "list(filter(odd, numbers))"
@@ -2186,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,42 +2185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[x for x in numbers if x % 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in numbers if odd(x)]"
    ]
   },
   {
@@ -2238,7 +2197,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[x for x in numbers if odd(x)]"
+   ]
   }
  ],
  "metadata": {
