210707 | add effective typescript Item04-05 contents

--- a/09_ts/04_effective_typescript/Item01-05.md
+++ b/09_ts/04_effective_typescript/Item01-05.md
@@ -145,4 +145,90 @@ async function setLight() {
 
 ### :star: 타입스크립트 타입으로는 함수를 오버로드할 수 없다
 
-(작성중...)
+- 함수 오버로딩
+
+  ```c++
+  // 아래 두 함수는 중복된 함수 구현이다.
+  function add(a: number, b: number) { return a + b; }
+  function add(a: string, b: string) { return a + b; }
+  ```
+
+  - 동일한 이르메 매개변수만 다른 여러 버전의 함수를 허용
+  - 그러나 타입스크립트에서는 타입과 런타임의 동작이 무관하므로 함수 오버로딩은 불가능하다.
+
+- 타입스크립트가 함수 오버로딩 기능을 지원하기는 하지만, 온전히 타입 수준에서만 동작한다.
+
+  - 하나의 함수에 대해 여러 개의 선언문을 작성할 수 있지만, 구현체는 오직 하나뿐이다.
+  - 타입스크립트에서 함수 오버로딩 기능을 동작하게 하려면 오버로팅 타입 보다는 조건부 타입을 사용하는 것이 좋다.
+
+<br>
+
+### :star: 타입스크립트 타입은 런타임 성능에 영향을 주지 않는다.
+
+- 타입과 타입 연산자는 자바스크립트 변환 시점에 제거되기 때문에, 런타임의 성능에 아무런 영향을 주지 않는다.
+  - 타입스크립트의 정적 타입은 실제로 비용이 전혀 들지 않는다.
+
+<br>
+
+## Item04. 구조적 타이핑에 익숙해지기
+
+- 덕 타이핑(Duck Typing)
+  - 객체가 어떤 타입에 부합하는 변수와 메서드를 가질 경우 객체를 해당 타입에 속하는 것으로 간주하는 방식
+  - 자바스크립트는 본질적으로 덕 타이핑 기반이다.
+
+- 타입스크립트도 구조적 타이핑(덕 타이핑) 기반인데 이 때문에 값을 세밀하게 구분하지 못하는 경우가 있다.
+  - 그래서 값을 구분하기 위해 공식 명칭이 필요하다면 상표를 붙이는 것을 고려해야 한다.
+- 타입이 열려있다
+  - 타입의 확장에 열려 있다는 의미
+  - 즉, 타입에 선언된 속성 외에 임의의 속성을 추가하더라도 오류가 발생하지 않는다는 것
+- 타입스크립트 타입 시스템에서 타입은 열려있는데 이러한 특성 때문에 가끔 당황스러운 결과가 발생한다.
+
+```typescript
+interface Vector3D {
+  x: number;
+  y: number;
+  z: number;
+}
+
+function calculateLengthL1(v: Vector3D) {
+  let length = 0;
+    
+  for (const axis of Object.keys(v)) {
+    const coord = v[axis]; // 'string'은 'Vector3D'의 인덱스로 사용할 수 없기에 엘리먼트는 암시적으로 'any' 타입입니다.
+      
+    length += Math.abs(coord);
+  }
+    
+  return length;
+}
+```
+
+- 위와 같은 경우 `axis`는 `Vector3D` 타입인 `v`의 키 중 하나이기 때문에 `x`, `y`, `z` 중 하나여야 한다.
+  - 그리고 `Vector3D`의 선언에 따르면 이들은 모두 `number`이므로 `coord`의 타입이 `number`가 되어야 할 것으로 예상되지만 위와 같이 오류가 뜨는 것이 맞다.
+  - `v`는 어떤 속성이든 가질 수 있기 때문에 `axis`의 타입은 `string`이 될 수도 있다.
+  - 정확한 타입으로 객체를 순회하는 것을 까다로운 문제이다.
+  - 그래서 루프보다는 모든 속성을 각각 더하는 구현이 더 낫다.
+
+```typescript
+function calculateLengthL1(v: Vector3D) {
+  return Math.abs(v.x) + Math.abs(v.y) + Math.abs(v.z);
+}
+```
+
+<br>
+
+## Item05. `any` 타입 지양하기
+
+- `any` 타입에는 타입 안전성이 없다.
+- `any`는 함수 시그니처를 무시해 버린다.
+  - 호출하는 쪽은 약속된 타입의 입력을 제공하고, 함수는 약속된 타입의 출력을 반환한다.
+  - 그러나 `any` 타입을 사용하면 이러한 약속을 어길 수 있다.
+- `any` 타입에는 언어 서비스가 적용되지 않는다.
+  - 어떤 심벌에 타입이 있다면 타입스크립트 언어 서비스는 자동완성 기능과 적절한 도움말을 제공한다.
+  - 그러나 `any` 타입인 심벌을 사용하면 아무런 도움을 받지 못한다.
+- `any` 타입은 코드 리팩토링 때 버그를 감춘다.
+- `any`는 타입 설계를 감춰버린다.
+  - `any` 타입을 사용하면 타입 설계가 불분명해진다.
+  - 설계가 잘 되었는지, 설계가 어떻게 되어 있는지 전혀 알 수 없다.
+  - 설계가 명확히 보이도록 타입을 일일이 작성하는 것이 좋다.
+- `any`는 타입시스템의 신뢰도를 떨어뜨린다.
